@@ -1,4 +1,5 @@
 0.05
+- Update build system.
 
 0.04 (July 16, 2012)
 - Add examples/ directory.
